<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroup"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_100sdp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/tvUser"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/imageUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/tv_backgroud"
       android:hint="@string/prompt_username"
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/tvPass"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/tvUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/tv_backgroud"
        android:hint="@string/prompt_password"
        android:textSize="24sp"
        android:gravity="center"
        android:inputType="textPassword"/>
    <RelativeLayout

        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvPass"
        android:id="@+id/rlv"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textSize="@dimen/_8sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forgotpass"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_8sdp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnLog"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/rlv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/btn_backgroud"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/colorWhile"
        android:textSize="16sp"/>

</RelativeLayout>