<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvWelcom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layouttoolbar"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/textWelcome"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/lnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWelcom"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/rv_backgroud">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFood"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:layout_below="@+id/tvWelcom"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:scrollbarSize="@dimen/_8sdp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lnt"
            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textTotal" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0$" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/btn_backgroud"
            android:text="@string/textOrder"
            android:textColor="@color/colorWhile"
            android:textSize="20sp" />
    </RelativeLayout>

</layout>